@@ -4,9 +4,6 @@ trove.jar=lib/trove.jar
 # http://jcae.sourceforge.net/
 occjava.jar=lib/occjava.jar
 
-# http://logging.apache.org/log4j/docs/
-log4j.jar=lib/log4j.jar
-
 # for j2se 5.0
 #compiler.arg=-Xlint -target 1.4 -source 1.4
 compiler.arg=-source 5 -target 5
